--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
 
     <h1>This is Headign One</h1>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m "message"</li>
+        <li>git push</li>
+    </ul>
     
 </body>
 </html>
